# LLM-Anomaly-Detection-Project

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
anomaly_detector/: Dockerfile  detector.py  requirements.txt
api/: Dockerfile  app.py  requirements.txt
data_generator/: Dockerfile  generate.py
summary_generator/: Dockerfile  generator.py  requirements.txt
